[gd_scene load_steps=5 format=3 uid="uid://ds7n8vkl416e3"]

[ext_resource type="Script" uid="uid://cctdjmtraamx5" path="res://assets/scripts/enemy.gd" id="1_vbccy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xaro"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_vbccy"]
radius = 600.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbccy"]

[node name="basicEnemy" type="RigidBody2D"]
physics_interpolation_mode = 1
collision_layer = 4
continuous_cd = 2
script = ExtResource("1_vbccy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="physicalCol" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7xaro")

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="triggerCircle" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_vbccy")

[node name="contact" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="ContactCol" type="CollisionShape2D" parent="contact" groups=["enemies"]]
shape = SubResource("RectangleShape2D_vbccy")

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="contact" to="." method="_on_contact_body_entered"]
